--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <div class="destination" id="hangzhou">
                 <h2>Hangzhou</h2>
             </div>
+
+            <div class="destination" id="berlin">
+                <h2>Berlin</h2>
+            </div>
         </div>
     </div>
 
